--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -1,8 +1,9 @@
-@import url("https://fonts.googleapis.com/css2?family=Comic+Neue:wght@400;700&display=swap");
+@import url('https://fonts.googleapis.com/css2?family=Jost:wght@200&display=swap');
 
 body {
   color: white;
-  font-family: "Comic Neue", cursive;
+  font-family: 'Jost', sans-serif;
+  font-size: large;
   background: rgb(40, 40, 40);
 }
 
@@ -13,7 +14,7 @@ body {
 }
 
 .single-user {
-  background: rgb(0, 213, 255);
+  background: #6c61ff;
   cursor: pointer;
   padding: 5px 7px;
   border-radius: 10px;
@@ -59,7 +60,7 @@ body {
 .chat-box {
   max-height: calc(100vh - 10rem);
   overflow-y: auto;
-  background: rgb(25, 25, 25);
+  background: rgb(76, 75, 75);
   border-radius: 10px;
 }
 
@@ -94,7 +95,7 @@ body {
 
 .message.self {
   color: white;
-  background: #00bd9b;
+  background: #6c61ff;
 }
 
 .message-footer {
