--- a/frontend/src/index.css
+++ b/frontend/src/index.css
@@ -15,6 +15,7 @@ body {
 
 .single-user {
   background: #6c61ff;
+  font-weight: 700;
   cursor: pointer;
   padding: 5px 7px;
   border-radius: 10px;
@@ -35,7 +36,7 @@ body {
 }
 
 .user-card .name {
-  font-weight: 700;
+  font-weight: 500;
 }
 
 .user-card .text,
@@ -60,7 +61,7 @@ body {
 .chat-box {
   max-height: calc(100vh - 10rem);
   overflow-y: auto;
-  background: rgb(76, 75, 75);
+  background: #5B5D74;
   border-radius: 10px;
 }
 
@@ -75,7 +76,7 @@ body {
   justify-content: center;
   padding: 0.75rem;
   color: white;
-  background: rgb(30, 30, 30);
+  background: #11040E;
 }
 
 /* Messages */
@@ -87,7 +88,7 @@ body {
 
 .message {
   color: white;
-  background: #282828;
+  background: #11040E;
   padding: 0.75rem;
   border-radius: 5px;
   max-width: 50%;
@@ -107,12 +108,12 @@ body {
 /* Chat Input  */
 .chat-input {
   width: 100%;
-  background: rgb(30, 30, 30);
+  background: #11040E;
   padding: 1rem;
 }
 .send-btn {
   border: none;
-  background: rgba(72, 112, 223, 1);
+  background: #6c61ff;
   color: white;
   height: 40px;
   width: 40px;
